# tree-sitter-jass

./: .gitignore  Cargo.toml  README.md  binding.gyp  generate.sh  grammar.js  package.json  tree-sitter.json
bindings/node/: binding.cc
bindings/rust/: build.rs  lib.rs
examples/: example.jass  test.jass  test_simple.jass
src/: grammar.json  node-types.json  parser.c  scanner.c
test/: README.md
test/corpus/: blocks.txt  expressions.txt  literals.txt  recovery.txt  statements.txt
